--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
             font-size: 2.5rem;
         }
 
+        p.description {
+            font-size: 1.2rem;
+            color: #ffcc80; /* Anaranjado más claro */
+            margin: 10px 0 20px 0;
+        }
+
         .news-container {
             margin: 20px auto;
             max-width: 800px;
@@ -58,6 +64,7 @@
 </head>
 <body>
     <h1>Noticias sobre la Universidad UK</h1>
+    <p class="description">Esta página muestra noticias actualizadas y seleccionadas aleatoriamente sobre la Universidad UK.</p>
     <div class="news-container">
         <p class="loading">Cargando noticias...</p>
     </div>
